--- a/更新日志.md
+++ b/更新日志.md
@@ -9,3 +9,7 @@
 - 改善了内存回收，解决了使用过久可能会造成的explorer响应迟钝问题
 - 去除了淡入淡出功能
 - 改进了explorer上方菜单栏挡住图片的问题
+
+## Release v1.0.1 (2024.02.24)
+
+- Fix bug: [#3](https://github.com/wang606/Wmask/issues/3)
