--- a/更新日志.md
+++ b/更新日志.md
@@ -13,3 +13,8 @@
 ## Release v1.0.1 (2024.02.24)
 
 - Fix bug: [#3](https://github.com/wang606/Wmask/issues/3)
+
+## Release v1.1.0 (2024.02.24)
+
+- FIx bug: [#4](https://github.com/wang606/Wmask/issues/4)
+
